namespaces/live.cloud-platform.service.justice.gov.uk/manage-offences-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: manage-offences-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "offence_reference_data"
    cloud-platform.justice.gov.uk/slack-alert-channel: "offence_reference_data"
    cloud-platform.justice.gov.uk/application: "Manage offences"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/manage-offences.git"
    cloud-platform.justice.gov.uk/team-name: "farsight-devs"
